--- a/src/modules/Page/styles.module.scss
+++ b/src/modules/Page/styles.module.scss
@@ -1,6 +1,6 @@
 .page {
   display: flex;
-  background-color: #eaeef3;
+  background-color: #f0f0f0; 
   justify-content: center;
   align-items: center;
   width: 100%;
