--- a/src/components/Input/styles.module.scss
+++ b/src/components/Input/styles.module.scss
@@ -1,14 +1,76 @@
+// .input {
+//     max-width: 502px;
+//     width: 100%;
+//     padding: 8px 12px;
+//     padding-right: 0;
+//     border-radius: 8px;
+//     border: 1px solid #E5E9EB;
+//     background-color: transparent;
+//     font-size: 14px;
+//     font-style: normal;
+//     font-weight: 400;
+//     line-height: 24px; 
+//     letter-spacing: -0.084px;
+// }
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 12px;
+}
+
+// .inputWrapper {
+//     display: flex;
+//     align-items: center;
+//     display: flex;
+//     border: 1px solid $icon-color;
+//     background: $white;
+//     border-radius: 8px;
+// }
+
+.label {
+    margin-right: 0;
+    margin-bottom: 4px;
+    color: $dark-grey;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0px;
+}
+
 .input {
-    max-width: 502px;
     width: 100%;
-    padding: 8px 12px;
-    padding-right: 0;
+    padding: 8px;
     border-radius: 8px;
-    border: 1px solid #E5E9EB;
+    border: none;
     background-color: transparent;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 24px; 
     letter-spacing: -0.084px;
+}
+
+.input:focus {
+    outline: none;
+}
+
+.input::placeholder {
+    color: #9AA6AC;
+}
+
+.input.error {
+    color:  $required;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px; 
+    letter-spacing: -0.096px;
+    border: 2px solid  $required;
+    background:  $black-white-white;
+}
+
+.required {
+    margin-left: 4px;
+    color: $required;
 }
