--- a/src/modules/Page/PageSuccess/styles.module.scss
+++ b/src/modules/Page/PageSuccess/styles.module.scss
@@ -16,8 +16,8 @@
     max-height: 500px;
     height: 100%;
     border-radius: 8px;
-    background-color: #fff; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
+    // background-color: #fff; 
+    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
     display: flex;
     justify-content: center;
     align-items: center;
