--- a/src/modules/Page/styles.module.scss
+++ b/src/modules/Page/styles.module.scss
@@ -5,8 +5,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  padding-top: 500px;
-  overflow: auto;
+  overflow: scroll;
 }
   
 Input {
@@ -21,6 +20,7 @@ Select {
   padding: 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   background-color: #fff;
+  margin-top: 400px;
   margin-bottom: 30px;
   border-radius: 8px;
 }
@@ -36,4 +36,9 @@ Select {
   line-height: 24px;
   letter-spacing: -0.006em;
   text-align: left;  
+}
+
+.required {
+  margin-left: 4px;
+  color: $required;
 }
