--- a/src/components/CustomSelect/styles.module.scss
+++ b/src/components/CustomSelect/styles.module.scss
@@ -10,14 +10,14 @@
     flex-direction: column;
 }
 
+
 .label {
-    display: inline-block   ;
-    margin-bottom: 4px;
-    color: $dark-grey;
-    font-size: 16px;
-    font-weight: 600;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 500;
     line-height: 24px;
-    letter-spacing: 0px;
+    letter-spacing: -0.006em;
+    text-align: left;  
 }
 
 .required {
