--- a/src/components/PhoneNumber/styles.module.scss
+++ b/src/components/PhoneNumber/styles.module.scss
@@ -5,15 +5,12 @@
 }
 
 .label {
-    font-family: "Inter";
-    display: inline-block;
-    margin-right: 0;
-    margin-bottom: 4px;
-    color: $dark-grey;
-    font-size: 16px;
-    font-weight: 600;
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 500;
     line-height: 24px;
-    letter-spacing: 0px;
+    letter-spacing: -0.006em;
+    text-align: left;  
 }
 
 .input {
